# Ouroboros

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  WORKFLOW.md  agents.md  docker-compose.yml  ouroboros_plan_v3.txt  pyproject.toml
.codex/: worktree_init.sh
.gitea/: PULL_REQUEST_TEMPLATE.md
.github/: pull_request_template.md
docs/: README.md  agent-constraints.md  agents.md  architecture.md  commands.md  context-tree.md  disaster_recovery.md  live-trading-checklist.md  requirements-log.md  skills.md  testing.md  workflow.md  한국투자증권_오픈API_전체문서_20260221_030000.xlsx
scripts/: audit_queries.sql  backtest_gate.sh  backup.sh  github_pr.py  morning_report.sh  restart_canonical_main_runtime.sh  restore.sh  run_overnight.sh  runtime_instance_env.sh  runtime_verify_monitor.sh  session_handover_check.py  stop_overnight.sh  symphony_before_remove_canonical_restart.sh  sync_backtest_gate_artifact.sh  tea_comment.sh  validate_docs_sync.py  validate_governance_assets.py  validate_ouroboros_docs.py  validate_pr_body.py  watchdog.sh
src/: config.py  db.py  logging_config.py  main.py
tests/: conftest.py  test_backtest_cost_guard.py  test_backtest_execution_model.py  test_backtest_gate.py  test_backtest_pipeline_integration.py  test_backup.py  test_blackout_manager.py  test_brain.py  test_broker.py  test_config.py  test_context.py  test_context_scheduler.py  test_daily_review.py  test_dashboard.py  test_data_integration.py  test_db.py  test_decision_engine.py  test_decision_logger.py  test_evolution.py  test_github_pr.py  test_kill_switch.py  test_kis_websocket.py  test_kr_exchange_router.py  test_latency_control.py  test_logging_config.py  test_logging_shadowing.py  test_main.py  test_market_schedule.py  test_market_tracking.py  test_order_policy.py  test_overseas_broker.py  test_peak_model_metrics.py  test_peak_probability_model.py  test_pending_orders.py  test_risk.py  (+23 more)
(+241 files in other folders)
