[project]
name = "the-ouroboros"
version = "0.1.0"
description = "Evolutionary AI Trading Agent for KIS"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9,<4",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "google-genai>=1.0,<2",
    "scipy>=1.11,<2",
    "fastapi>=0.110,<1",
    "uvicorn>=0.29,<1",
    "scikit-learn>=1.4,<2",
    "numpy>=1.26,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<6",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
]

[project.scripts]
ouroboros = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["src/strategies/v*_evolved.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.coverage.run]
omit = ["src/strategies/v*_evolved.py"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
